// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`An ECheckbox > looks like a checkbox > checked 1`] = `
<div data-app>
     <span id>true</span>
     <div class="e-form-container"
          name="test"
          value="true">
          <div class="v-checkbox v-input v-input--center-affix v-input--density-default v-input--dirty v-input--horizontal v-locale--is-ltr v-theme--light">
               <!---->
               <div class="v-input__control">
                    <div class="v-checkbox-btn v-selection-control v-selection-control--density-default v-selection-control--dirty">
                         <div class="v-selection-control__wrapper"> undefined <div class="v-selection-control__input">
                                   <i aria-hidden="true"
                                      class="mdi mdi-checkbox-marked notranslate v-icon v-icon--size-default v-theme--light"></i>
                                   <input aria-disabled="false"
                                          aria-label="test"
                                          checked
                                          id
                                          type="checkbox"
                                          value="true">
                              </div>
                         </div>
                         <label class="v-label v-label--clickable"
                                for>
                              <!---->test
                         </label>
                    </div>
               </div>
               <!---->
               <!---->
          </div>
     </div>
</div>
`;

exports[`An ECheckbox > looks like a checkbox > unchecked 1`] = `
<div data-app>
     <span id>false</span>
     <div class="e-form-container"
          name="test"
          value="false">
          <div class="v-checkbox v-input v-input--center-affix v-input--density-default v-input--dirty v-input--horizontal v-locale--is-ltr v-theme--light">
               <!---->
               <div class="v-input__control">
                    <div class="v-checkbox-btn v-selection-control v-selection-control--density-default">
                         <div class="v-selection-control__wrapper"> undefined <div class="v-selection-control__input">
                                   <i aria-hidden="true"
                                      class="mdi mdi-checkbox-blank-outline notranslate v-icon v-icon--size-default v-theme--light"></i>
                                   <input aria-disabled="false"
                                          aria-label="test"
                                          id
                                          type="checkbox"
                                          value="true">
                              </div>
                         </div>
                         <label class="v-label v-label--clickable"
                                for>
                              <!---->test
                         </label>
                    </div>
               </div>
               <!---->
               <!---->
          </div>
     </div>
</div>
`;
